k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/hospital-like-webapp-default: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: DB_URL
              value: postgresql://postgres:postgres@db/your_database
          image: edwardwu/grafana:9.4.7-3
          name: app
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
